# lyndon-llm

./: .gitignore  .sops.yaml  CLAUDE.md  README.md  docker-compose.yml
.claude/: launch.json  settings.local.json
backend/: .env.example  Dockerfile  package.json  pyproject.toml  start.sh
backend/api/: auth_deps.py  deps.py  main.py
backend/api/routes/: auth.py  chat.py  code.py  cowork.py  github.py  metrics.py  projects.py  rag.py  registry.py  sandbox.py  scheduled_tasks.py  skills.py  transcribe.py
backend/api/ws/: stream.py
backend/chat/: engine.py  executor.py  orchestrator.py  planner.py  project_context.py
backend/chat/memory/: cross_session_file.py  long_term.py  manager.py  session_file.py  short_term.py  types.py
backend/chat/rag/: retriever.py
backend/chat/rag/ingestion/: chunker.py  loader.py  pipeline.py
backend/chat/tools/: chart.py  list_skills.py  rag_query.py  run_code.py  web_search.py
backend/code/: editor.py  repo.py  reviewer.py  test_runner.py
backend/config/: settings.py
backend/core/events/: bus.py
backend/core/llm/: clip_embedder.py  gateway.py
backend/core/mcp/: client.py  manager.py
backend/core/permissions/: gate.py
backend/core/scheduler/: __init__.py  runner.py  schedule.py
backend/core/security/: __init__.py  crypto.py  pii.py
backend/core/session/: manager.py  stream_registry.py  tool_approval.py
backend/core/tools/: base.py  registry.py  risk.py  working_dir.py
backend/core/tools/os_control/: __init__.py  base.py  mac.py  windows.py
backend/core/transcription/: __init__.py  whisper.py
backend/cowork/: executor.py  planner.py
backend/cowork/tools/: file_io.py  mac_control.py  os_control.py  shell.py
backend/db/: base.py
backend/db/models/: __init__.py  chat.py  cowork.py  login_record.py  mcp.py  metrics.py  project.py  scheduled_task.py  skill.py  user.py
backend/db/repos/: chat.py  mcp.py  metrics.py  project.py  scheduled_task.py  skill.py  user.py
backend/db/vector/: store.py
backend/sandbox/: runner.py
backend/scripts/: migrate_encrypt_memory.py  rekey_memory.py
backend/skills/: manager.py  parser.py
backend/tests/: test_llm_gateway.py  test_session_manager.py
backend/tests/test_api/: test_auth_settings.py  test_chat_route.py  test_models_endpoint.py
backend/tests/test_chat/: test_chart_tool.py  test_cross_session_isolation.py  test_engine.py  test_engine_helpers.py  test_llm_orchestrator.py  test_memory_manager.py  test_orchestrator.py  test_rag.py  test_short_term_memory.py  test_thinking_parser.py
backend/tests/test_cowork/: test_os_control.py  test_working_dir.py
backend/tests/test_db/: test_chat_repo.py
backend/tests/test_security/: test_memory_at_rest.py  test_memory_crypto.py  test_pii_redaction.py  test_rekey.py
backend/tests/test_skills/: test_inject_args.py  test_parser.py
deploy/: Chart.yaml  values-secrets.yaml  values-secrets.yaml.example  values.yaml
deploy/templates/: _helpers.tpl  backend-configmap.yaml  backend-deployment.yaml  backend-pvc.yaml  backend-secret.yaml  backend-service.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  qdrant-deployment.yaml  qdrant-pvc.yaml  qdrant-service.yaml
desktop/: package-lock.json  package.json
desktop/src-tauri/: .gitignore  Entitlements.plist  Info.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
doc/: RUNBOOK.md  android.md  architecture.md  bootstrap.md  future.md
doc/backend/: api.md  chat.md  code.md  config.md  core.md  cowork.md  db.md  index.md  mcp.md  memory.md  openapi.yaml  rag.md  sandbox.md  scheduler.md  sessions.md  skills.md  transcription.md
doc/desktop/: overview.md
doc/frontend/: api-client.md  components.md  hooks.md  i18n.md  overview.md  state.md  streaming.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  test-setup.ts
frontend/src/api/: client.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/components/auth/: DeleteAccountDialog.tsx  LoginDialog.tsx
frontend/src/components/chat/: ChatWindow.tsx  MicButton.tsx  PlanPreviewCard.tsx
frontend/src/components/code/: CodeWindow.tsx
frontend/src/config/: codeThemes.ts
frontend/src/hooks/: useAudioRecorder.ts  useChatHistory.ts  useMediaQuery.ts  usePlanExecution.ts  useProjects.ts  useScheduledTasks.ts  useSpeech.ts  useStream.ts
frontend/src/i18n/: en.ts  index.ts  zh.ts
frontend/src/lib/: platform.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
(+31 files in other folders)
