[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyndon-llm-backend"
version = "0.1.0"
description = "Personal agent backend — Chat, Cowork, Code"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # LLM & Embeddings
    "openai>=1.30",
    # MCP (user-registered tool servers)
    "mcp>=1.0",
    # Vector stores
    "chromadb>=0.5",
    "qdrant-client>=1.9",
    # RAG document loaders
    "pypdf>=4.2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    # Web search
    "ddgs>=9.0",
    # Code block
    "gitpython>=3.1",
    # DB
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "greenlet>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",   # for TestClient
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
