[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyndon-llm-backend"
version = "0.1.0"
description = "Personal agent backend — Chat, Cowork, Code"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # LLM & Embeddings
    "openai>=1.30",
    # Observability
    "langfuse>=2.0",
    # MCP (user-registered tool servers)
    "mcp>=1.0",
    # Skill manifest parsing
    "pyyaml>=6.0",
    # Vector stores
    "chromadb>=0.5",
    "qdrant-client>=1.9",
    # RAG document loaders
    "pypdf>=4.2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    # Image RAG (CLIP multimodal embeddings)
    "open-clip-torch>=2.24",
    "pillow>=10.0",
    # Web search
    "ddgs>=9.0",
    # Code block
    "gitpython>=3.1",
    # Auth
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "authlib>=1.3",
    # Memory-at-rest encryption (Fernet + HKDF)
    "cryptography>=42.0",
    # DB
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "greenlet>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",   # for TestClient
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
skip_empty = true

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, …)
    "I",    # isort — import ordering
    "UP",   # pyupgrade — modernise syntax
    "B",    # flake8-bugbear — likely bugs / design issues
    "ASYNC",# flake8-async — async pitfalls
    "C4",   # flake8-comprehensions — cleaner comprehensions
    "SIM",  # flake8-simplify — unnecessary complexity
    "TCH",  # flake8-type-checking — TYPE_CHECKING guards
]
ignore = [
    "E501",    # line too long — formatter handles it
    "B008",    # function call in default arg (common FastAPI pattern)
    "SIM108",  # ternary vs if/else — readability call
    "TC001",   # move app import into TYPE_CHECKING — not needed at runtime here
    "TC002",   # move third-party import into TYPE_CHECKING — not needed here
    "TC003",   # move stdlib import into TYPE_CHECKING — not needed here
    "ASYNC109", # timeout param name — we pass it explicitly to subprocesses, not asyncio.timeout
    "ASYNC230", # open() in async def — we're writing temp files before subprocess, not I/O bound
    "ASYNC240", # pathlib in async — one-off mkdir; acceptable
]

[tool.ruff.lint.isort]
known-first-party = ["api", "chat", "code", "cowork", "config", "core", "db", "sandbox"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
